--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>6.0.3</spring.version>
-        <logback.version>1.4.5</logback.version>"
+        <logback.version>1.4.5</logback.version>
         <slf4j.version>2.0.6</slf4j.version>
     </properties>
 
