--- a/ftp-server/src/main/resources/application.yml
+++ b/ftp-server/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
     password: 365373011
     url: jdbc:mysql://192.168.18.191:3306/ftp?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+logging:
+  level:
+    com.lyra: info
